# naive_data_processor

./: .gitignore  Cargo.toml  build.rs  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: 01_build.yml
config/: Readme.md  formation_table.toml  header.toml  humidity.toml  level1.csv  level1.toml  temperature.toml
data/: data.csv  error.csv  response_1691854555176.csv  result.csv
database/: FloatTable.db  Readme.md  TextTable.db  setup.py  show.py
module/: Readme.md  boundary.py  hello_world.py
module/c/: main.c  main.h  makefile
module/python/: Readme.md  boundary.py  hello_world2.py
proto/: qc.proto
serial/config_serial/: header.toml  level0.toml
serial/src_serial/qc/: metadata.rs  mod.rs  qc_level0.rs  qc_level1.rs
serial/src_serial/utils/: file.rs
src/: main.rs
src/bin_drop/: server.rs
src/lib/: config_parser.rs  data_parser.rs  database.rs  mod.rs  qc.rs  qc_worker.rs
src/lib/general_module/: mod.rs
src/lib/py_module/: mod.rs
src/lib/qc_module/: mod.rs  qc_boundary.rs  qc_consist.rs
src/qc/: metadata.rs  qc_level1.rs
src/utils/: cli.rs  mod.rs
