[package]
name = "data_preprocesser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"

[[bin]]
name = "server"

[dependencies]
toml = "0.8.2"
serde = { version = "1.0.179", fetures = ["derive"] }
serde_derive = "1.0.179"
chrono = "0.4.26"
bitflags = "2.3.3"
clap = {version = "4.3.21", features = ["derive"]}
sqlite = "0.31.1"
