[package]
name = "data_preprocesser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "server"
# path = "src/main.rs"

# [[bin]]
# name = "client"
# path = "src/client.rs"

[dependencies]
toml = "0.8.2"
serde = { version = "1.0.179", fetures = ["derive"] }
serde_derive = "1.0.179"
chrono = "0.4.26"
bitflags = "2.3.3"
clap = {version = "4.3.21", features = ["derive"]}
sqlite = "0.32.0"
pyo3 = { version = "0.20.0", features = ["auto-initialize"]}
libloading = "0.8.1"

tokio = {version = "1.33.0", features = ["macros", "sync", "rt-multi-thread"]}
tonic = "0.10.2"
prost = "0.12.3"

[build-dependencies]
tonic-build = {version = "0.10.2"}
